Bug fix. Sonarcloud found bug in css. Unnecessary "align" was removed.

--- a/front/src/components/Rooms/Rooms.css
+++ b/front/src/components/Rooms/Rooms.css
@@ -11,5 +11,4 @@
 
 a {
     all: initial;
-    align: right;
 }
